--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -1,2 +1,291 @@
-// Here you can add other styles
+@font-face {
+  font-family: 'data-table';
+  src: url('fonts/data-table.eot');
+  src: url('fonts/data-table.eot?#iefix') format('embedded-opentype'), url('fonts/data-table.woff') format('woff'),
+    url('fonts/data-table.ttf') format('truetype'), url('fonts/data-table.svg#data-table') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+[data-icon]::before {
+  font-family: 'data-table' !important;
+  content: attr(data-icon);
+  font-style: normal !important;
+  font-weight: normal !important;
+  font-variant: normal !important;
+  text-transform: none !important;
+  speak: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+[class^='datatable-icon-']::before,
+[class*=' datatable-icon-']::before {
+  font-family: 'data-table' !important;
+  font-style: normal !important;
+  font-weight: normal !important;
+  font-variant: normal !important;
+  text-transform: none !important;
+  speak: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.datatable-icon-filter::before {
+  content: '\62';
+}
+
+.datatable-icon-collapse::before {
+  content: '\61';
+}
+
+.datatable-icon-expand::before {
+  content: '\63';
+}
+
+.datatable-icon-close::before {
+  content: '\64';
+}
+
+.datatable-icon-up::before {
+  content: '\65';
+}
+
+.datatable-icon-down::before {
+  content: '\66';
+}
+
+.datatable-icon-sort-unset::before {
+  content: '\63';
+  opacity: 0.5;
+}
+
+.datatable-icon-sort::before {
+  content: '\67';
+}
+
+.datatable-icon-done::before {
+  content: '\68';
+}
+
+.datatable-icon-done-all::before {
+  content: '\69';
+}
+
+.datatable-icon-search::before {
+  content: '\6a';
+}
+
+.datatable-icon-pin::before {
+  content: '\6b';
+}
+
+.datatable-icon-add::before {
+  content: '\6d';
+}
+
+.datatable-icon-left::before {
+  content: '\6f';
+}
+
+.datatable-icon-right::before {
+  content: '\70';
+}
+
+.datatable-icon-skip::before {
+  content: '\71';
+}
+
+.datatable-icon-prev::before {
+  content: '\72';
+}
+
+/**=====================
+    30. Data-table CSS Start
+==========================**/
+ 
+  table{
+    &.dataTable{
+      &.display {
+        tbody {
+          tr{
+            &.odd {
+              > .sorting_1{
+                background-color: $light;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  .ngx-datatable {
+      &.bootstrap {
+          .datatable-body {
+            .datatable-body-row[ng-reflect-is-selected="true"] {
+              &:hover {
+                background-color: darken($primary-color, 5%) !important;
+              }
+            }
+          }
+          .datatable-footer {
+              .datatable-pager {
+                  .datatable-icon-left, .datatable-icon-skip, .datatable-icon-right, .datatable-icon-prev {
+                      vertical-align: middle;
+                  }
+              }
+          }
+      }
+  }
+  .noscroll{
+    .datatable-footer{
+      .datatable-footer-inner{
+        height: auto !important;
+      }
+    }
+  }
+  .selection-datatable {
+    .table-responsive {
+      ng2-smart-table-pager {
+        margin-top: 0 !important;
+      }
+    }
+  }
+  @function fa-content($fa-var) {
+    @return unquote("\"#{ $fa-var }\"");
+  }
+  
+  $fa-var-500px: \f037;
+  .custom-datatable {
+    .datatable-icon-sort-unset sort-btn{
+      &:before {
+        content: "\f054";
+        font-family: $font-awesome !important;
+        font-size: 10px;
+      }
+    }
+    .datatable-icon-right {
+      &:before {
+        content: '\f054';
+        font-family: $font-awesome !important;
+        font-size: 10px;
+      }
+    }
+    .datatable-icon-left {
+      &:before {
+        content: fa-content($fa-var-500px);
+        font-family: $font-awesome !important;
+        font-size: 10px;
+      }
+    }
+    .datatable-icon-prev {
+      &:before {
+        content: "\f100";
+        font-family: $font-awesome !important;
+        font-size: 14px;
+      }
+    }
+    .datatable-icon-skip {
+      &:before {
+        content: "\f101";
+        font-family: $font-awesome !important;
+        font-size: 14px;
+      }
+    }
+    .ngx-datatable {
+      
+      &.bootstrap {
+        .datatable-header {
+          border: 1px solid $light-semi-gray;
+          border-bottom: none;
+          .datatable-header-cell {
+            border-bottom: none;
+          }
+        }
+        .datatable-body  {
+          border: 1px solid $light-semi-gray;
+          border-top: none;
+          margin-bottom: 6px;
+          .datatable-selection {
+            .datatable-scroll {
+              .datatable-row-wrapper {
+                &:last-child {
+                  border-bottom: none;
+                }
+              }
+            }
+          }
+  
+          .datatable-body-row {
+             input {
+               margin-bottom: 0;
+             }
+            &.active {
+              background-color: $primary-color;
+            }
+            &.datatable-row-even {
+              background-color: #f9f9f9;
+              &:hover {
+                background-color: $light;
+              }
+              &.active {
+                background-color: $primary-color;
+              }
+            }
+            &.datatable-row-odd {
+              &:hover {
+                background-color: $light;
+              }
+            }
+          }
+        }
+        .datatable-footer {
+          background: $white;
+          color: inherit;
+          .datatable-pager {
+            margin-right: 0;
+            ul {
+              li {
+                margin: 0;
+                &:not(.disabled).active {
+                  a {
+                    background-color: $primary-color;
+                    color: $white;
+                  }
+                }
+                &:not(.disabled):hover {
+                  a {
+                    border: 1px solid $primary-color;
+                    background-color: $transparent-color;
+                    color: inherit;
+                  }
+                }
+              }
+            }
+            a {
+              color: inherit;
+              height: 38px;
+              min-width: 38px;
+              line-height: 38px;
+            }
+          }
+        }
+      }
+      .datatable-body-row, .datatable-row-center, .datatable-header-inner {
+        display: -webkit-box !important;
+      }
+      .datatable-footer {
+        .datatable-pager {
+          .pager {
+            border: 1px solid $light-semi-gray;
+            border-radius: 4px;
+          }
+        }
+      }
+    }
+  }
+  /**=====================
+       30. Data-table CSS Ends
+  ==========================**/
 
